@@ -3,6 +3,7 @@ Version Next
 
     - Added SocketAcceptor
     - Added ValidationContext
+    - Added ParseUtil.deserializeBooleanStrictly()
 
 Version 1.0.189 Released Dec 16, 2011
 
